[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "fastparse"
version = "0.1.0"
description = "Superwydajna biblioteka do parsowania CSV w C++ z Python API"
authors = [{ name = "Twoje Imię", email = "you@example.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[tool.maturin]
bindings = "pyo3"
